video in header

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,9 @@
     <!-- <section class='header-wrapper'>
       <p class="headerintro"><strong>Christa Päffgen</strong>, beter bekend onder haar artiestennaam <strong>Nico</strong>, was een <strong>Duits fotomodel, actrice en zangeres</strong>. Nico was één van de fascinerendste en meest mysterieuze vrouwen van de multimedia revolutie uit de zestiger jaren en lang daarna, tot nu toe.</p>
     </section> -->
+    <video playsinline autoplay muted loop class="bgvid">
+      <source src="assets/video/header.mp4" type="video/mp4" />
+    </video>
   </header>
 
   <main>
