css responsive afgewerkt en MOV

--- a/src/index.html
+++ b/src/index.html
@@ -28,13 +28,14 @@
 <body>
 
   <header>
-    <!-- <section class='header-wrapper'>
-      <p class="headerintro"><strong>Christa Päffgen</strong>, beter bekend onder haar artiestennaam <strong>Nico</strong>, was een <strong>Duits fotomodel, actrice en zangeres</strong>. Nico was één van de fascinerendste en meest mysterieuze vrouwen van de multimedia revolutie uit de zestiger jaren en lang daarna, tot nu toe.</p>
-    </section> -->
-    <video playsinline autoplay muted loop poster="assets/img/velvetbanner100.jpg">
+    <video playsinline autoplay muted poster="assets/video/header.gif">
       <source src="assets/video/header.mp4" type="video/mp4" />
     </video>
     <div class="mobileheader"></div>
+    <section class="headercontent">
+      <h1>Nico</h1>
+      <p class="articlestyle"><strong>Christa Päffgen</strong>, beter bekend onder haar artiestennaam <strong>Nico</strong>, was een <strong>Duits fotomodel, actrice en zangeres</strong>. Nico was één van de fascinerendste en meest mysterieuze vrouwen van de multimedia revolutie uit de zestiger jaren en lang daarna, tot nu toe.</p>
+    </section>
   </header>
 
   <main>
@@ -57,7 +58,7 @@
     <section class='content'>
       <div class='modelsection'>
         <div class="modelteksten">
-          <article class='articlestyle margin model modelarticle1' data-id="1">
+          <article class='articlestyle margin model' data-id="1">
             De anekdotes van de tante waarbij ze inwoonde tijdens de oorlog en die de jonge Christa beschrijft als een prinses die er altijd uitzag om door een ringetje te halen, worden in de docu gecontrasteerd met beelden van de laatste levensjaren van Nico. <span class='quote'>De blonde engel veranderde in een junk met zwartgeverfde haren en een rot gebit.</span> De kracht van Ofteringers film ligt precies in het contrast tussen de sterk uiteenlopende percepties van mensen uit de omgeving van de zangeres. Ze beschrijven haar stuk voor stuk als een <strong>vat vol tegenstellingen</strong>:
           </article>
           <div class="model-image1"></div>
@@ -150,18 +151,18 @@
 
     <section class='black'>
       <div class="parallaxItem4"></div>
-      <article class='articlestyle2 margin darksize'>
+      <article class='articlestyle2 darksize'>
         <p class='articlestyle2'>
           De jaren daarop werd Nico meer aangezogen door het <span class='strong2'>Europese kunstcircuit</span>. Ze ruilde haar Amerikaanse tonge-in-cheek sfeer in voor <span class='strong2'>Europese ernst en diepgang</span>, dit aan de zijde van Franse cineast Philippe Garrel. Hij gaf haar een plaats in <span class='strong2'>hermetische filmgedichten</span>. Hoewel ze eerst vooral muziekaal meewerkte aan The Falconer uit zijn film Le Lit de la Vierge stortte ze zich terug op acteren voor La Cicatrice Intérieure. De soundtrack van de film bevatte heel wat tracks van haar derde album: <span class='underline strong2'>Desertshore</span>. Dit moet wel het hoogtepunt geweest zijn van haar solo carrière.
         </p>
       </article>
-      <article class='solocontainer margin'>
+      <article class='solocontainer'>
         <div class='react-mount5'></div>
         <cite class='solocite'>
           Ze had haar entree gemaakt in een donker milieu waar de donkere kant van de menselijke natuur geen pose was maar een filosofische expressie kreeg.
         </cite>
       </article>
-      <article class='articlestyle2 margin darksize'>
+      <article class='articlestyle2 darksize'>
         <p class='articlestyle2'>
           Terwijl ze zich op volgende albums stortte zowel op muzikaal vlak als op vlak van stem zwol de mythe rond haar figuur aan. Dit kwam vooral door haar relaties met muzikanten en kunstenaars, haar <span class='strong2'>heroïneverslaving</span>, haar imposante uiterlijk en onvoorspelbaarheid op het podium.
           <br />
@@ -176,8 +177,8 @@
       <div class='parallax10 parallaxItem5'></div>
     </section>
     <section class='black'>
-      <article class='articlestyle2 margin darksize'>
-        <p class='articlestyle2'>
+      <article class='articlestyle2 darksize'>
+        <p class='articlestyle2 darkend'>
           De jaren hierna leefde Nico als een <span class='strong2'>zwerver</span>, ze ging van land naar land en spendeerde de laatste jaren van haar leven in <span class='strong2'>Manchester (Engeland)</span>. Op 18 juli 1988, op vakantie op Ibiza samen met haar zoon Ari had ze een <span class='strong2'>hartaanval tijdens haar fietstocht</span> waar ze viel en haar hoofd hard stootte. Ze werd bewusteloos gevonden door een taxi bestuurder die haar naar het ziekenhuis bracht. Volgens de eerste diagnose was ze te lang bloot gesteld aan de warmte. Na de röntgenfoto’s kwam uiteindelijk aan het licht dat ze gestorven is door een <span class='strong2'>hevige hersenbloeding</span>.
         </p> <br /><br />
         <cite class='endcite'>
