--- a/src/index.html
+++ b/src/index.html
@@ -2,39 +2,25 @@
 <html lang="en" manifest="manifest.appcache">
 <head>
 
-          <meta charset="UTF-8">
-          <title>Nico, Nostalgie</title>
-          <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta charset="UTF-8">
+    <title>Nico, Nostalgie</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="description" content="tribute website to Nico"/>
+    <meta name="autohor" content="Eva Baete, Laurens Vandevyver"/>
+    <meta name="keywords" content="nico, velvet underground, music, nostalgie"/>
 
-          <script>
-
-            WebFontConfig = {
-              // https://github.com/typekit/webfontloader/blob/master/README.md
-              google: {
-                families: ['Roboto']
-              }
-            };
-
-            (function(d) {
-            var wf = d.createElement('script'), s = d.scripts[0];
-            wf.async = true;
-            wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js';
-            s.parentNode.insertBefore(wf, s);
-            })(document);
-
-          </script>
 </head>
 
 <body>
 
   <header>
-    <video playsinline autoplay muted poster="assets/video/header.gif">
+    <video playsinline autoplay muted loop poster="assets/video/header.gif">
       <source src="assets/video/header.mp4" type="video/mp4" />
     </video>
     <div class="mobileheader"></div>
     <section class="headercontent">
       <h1>Nico</h1>
-      <p class="articlestyle"><strong>Christa Päffgen</strong>, beter bekend onder haar artiestennaam <strong>Nico</strong>, was een <strong>Duits fotomodel, actrice en zangeres</strong>. Nico was één van de fascinerendste en meest mysterieuze vrouwen van de multimedia revolutie uit de zestiger jaren en lang daarna, tot nu toe.</p>
+      <p class="headerintro articlestyle"><strong>Christa Päffgen</strong>, beter bekend onder haar artiestennaam <strong>Nico</strong>, was een <strong>Duits fotomodel, actrice en zangeres</strong>. Nico was één van de fascinerendste en meest mysterieuze vrouwen van de multimedia revolutie uit de zestiger jaren en lang daarna, tot nu toe.</p>
     </section>
   </header>
 
