--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <body>
 
   <header>
-    <video playsinline autoplay muted loop poster="assets/video/header.gif">
+    <video playsinline autoplay muted poster="assets/video/header.gif">
       <source src="assets/video/header.mp4" type="video/mp4" />
     </video>
     <div class="mobileheader"></div>
